Correção do Caminho das Imagens

--- a/doacoes.html
+++ b/doacoes.html
@@ -15,7 +15,7 @@
   <header class="header-bg">
     <div class="header container">
       <div class="header-logo">
-        <img src="/img/abpalogo.svg" alt="">
+        <img src="./img/abpalogo.svg" alt="">
       </div>
       <div class="header-info">
         <section class="header-contato">
@@ -32,25 +32,25 @@
   <div class="menu-topo container">
     <nav>
       <ul class="ul-menu">
-        <li><a href="/index.html">Historia</a></li>
-        <li><a href="/doacoes.html">Doações</a></li>
+        <li><a href="./index.html">Historia</a></li>
+        <li><a href="./doacoes.html">Doações</a></li>
         <li><a href="#contato">Contato</a></li>
       </ul>
     </nav>
     <section class="redes-sociais">
-      <a href="https://www.facebook.com/ABPAsjbatista" target="_blank"><img src="/img/facebook.png" alt=""></a>
-      <a href="https://www.instagram.com/abpa_saojoaobatista" target="_blank"><img src="/img/instagram.png" alt=""></a>
+      <a href="https://www.facebook.com/ABPAsjbatista" target="_blank"><img src="./img/facebook.png" alt=""></a>
+      <a href="https://www.instagram.com/abpa_saojoaobatista" target="_blank"><img src="./img/instagram.png" alt=""></a>
     </section>
   </div>
   <div class="container img">
     <div class="doacao-separador">
-      <img src="/img/dog.png" alt="">
+      <img src="./img/dog.png" alt="">
     </div>
   </div>
   <div class="contato-bg">
     <div class="contato container">
       <div class="whatsapp">
-        <img src="/img/contatos.png" alt="" id="doacoes">
+        <img src="./img/contatos.png" alt="" id="doacoes">
         <h3>Transferência Bancária</h3>
         <p>Você pode doar qualquer valor diretamente para nossa conta bancária.</p>
         <br>
@@ -60,7 +60,7 @@
         <p>C/C: 122356-5</p>
       </div>
       <div class="animais">
-        <img src="/img/adote.png" alt="">
+        <img src="./img/adote.png" alt="">
         <h3>Doações de Produtos</h3>
         <p>Doe rações, medicamentos e roupinhas cirurgias.</p>
         <br>
@@ -78,7 +78,7 @@
     <div class="footer-bg">
       <div class="footer container">
         <div class="footer-texto">
-          <img src="/img/abpalogo.svg" alt="">
+          <img src="./img/abpalogo.svg" alt="">
           <h3>Formas de Contato</h3>
         </div>
         <div class="footer-formulario" id="contato">
@@ -86,11 +86,11 @@
           <h4>Telefone: +55 48 9 9607-1797</h4>
           <h4 class="email">E-mail: valdirhamesj@gmail.com</h4>
           <div class="footer-contato">
-            <a href="https://www.instagram.com/abpa_saojoaobatista" target="_blank"><img src="/img/instagram.png" alt=""></a>
+            <a href="https://www.instagram.com/abpa_saojoaobatista" target="_blank"><img src="./img/instagram.png" alt=""></a>
             <a href="https://www.facebook.com/ABPAsjbatista" target="_blank">
-              <img src="/img/facebook.png" alt=""></a>
+              <img src="./img/facebook.png" alt=""></a>
             <a href="https://wa.me/5548996071797">
-              <img src="/img/whatsapp.png" alt=""></a>
+              <img src="./img/whatsapp.png" alt=""></a>
           </div>
         </div>
       </div>
