--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header class="header-bg">
     <div class="header container">
       <div class="header-logo">
-        <img src="/img/abpalogo.svg" alt="">
+        <img src="./img/abpalogo.svg" alt="">
       </div>
       <div class="header-info">
         <section class="header-contato">
@@ -33,27 +33,27 @@
     <nav>
       <ul class="ul-menu">
         <li><a href="#historia">Historia</a></li>
-        <li><a href="/doacoes.html">Doações</a></li>
+        <li><a href="./doacoes.html">Doações</a></li>
         <li><a href="#contato">Contato</a></li>
       </ul>
     </nav>
     <section class="redes-sociais">
-      <a href="https://www.facebook.com/ABPAsjbatista" target="_blank"><img src="/img/facebook.png" alt=""></a>
-      <a href="https://www.instagram.com/abpa_saojoaobatista" target="_blank"><img src="/img/instagram.png" alt=""></a>
+      <a href="https://www.facebook.com/ABPAsjbatista" target="_blank"><img src="./img/facebook.png" alt=""></a>
+      <a href="https://www.instagram.com/abpa_saojoaobatista" target="_blank"><img src="./img/instagram.png" alt=""></a>
     </section>
   </div>
   <div class="banner-bg">
     <section class="banner container">
       <div class="banner-informacoes">
         <h1><span class="span-h1">Precisamos da sua ajuda.</span><br>Ajude a manter nossa causa<span class="span-mark">!</span></h1>
-        <a href="/doacoes.html">Faça uma doação</a>
+        <a href="./doacoes.html">Faça uma doação</a>
       </div>
-      <img src="/img/banner.png" alt="" class="banner-img">
+      <img src="./img/banner.png" alt="" class="banner-img">
     </section>
   </div>
   <main class="container">
     <div class="article">
-      <img src=" /img/cat.jpg" alt="">
+      <img src="./img/cat.jpg" alt="">
       <section class="article-historia">
         <h4 id="historia">Nossa história</h4>
         <p>Texto texto texto texto texto texto texto texto texto. Texto texto texto texto texto texto texto texto texto. Texto texto texto texto texto texto texto texto texto. Texto texto texto texto texto texto texto texto texto.</p>
@@ -73,13 +73,13 @@
   <div class="contato-bg">
     <div class="contato container">
       <div class="whatsapp">
-        <img src="/img/contatos.png" alt="" id="doacoes">
+        <img src="./img/contatos.png" alt="" id="doacoes">
         <h3>Converse Conosco</h3>
         <p>Deseja conhecer mais do nosso trabalho, ou doar algum valor? Entre em contato pelo nosso whatsapp.</p>
         <a class="whatsapp-link" href="https://web.whatsapp.com/send?phone=5599111112222" target="_blank">Inicie uma conversa</a>
       </div>
       <div class="animais">
-        <img src="/img/adote.png" alt="">
+        <img src="./img/adote.png" alt="">
         <h3>Animais para resgate</h3>
         <p>Deseja adotar algum animal? Veja quais estão precisando de um lar, e cuide do seu novo animalzinho.</p>
         <a href="https://www.instagram.com/abpa_saojoaobatista">Adote o seu novo pet</a>
@@ -96,7 +96,7 @@
     <div class="footer-bg">
       <div class="footer container">
         <div class="footer-texto">
-          <img src="/img/abpalogo.svg" alt="">
+          <img src="./img/abpalogo.svg" alt="">
           <h3>Formas de Contato</h3>
         </div>
         <div class="footer-formulario" id="contato">
@@ -104,11 +104,11 @@
           <h4>Telefone: +55 48 9 9607-1797</h4>
           <h4 class="email">E-mail: valdirhamesj@gmail.com</h4>
           <div class="footer-contato">
-            <a href="https://www.instagram.com/abpa_saojoaobatista" target="_blank"><img src="/img/instagram.png" alt=""></a>
+            <a href="https://www.instagram.com/abpa_saojoaobatista" target="_blank"><img src="./img/instagram.png" alt=""></a>
             <a href="https://www.facebook.com/ABPAsjbatista" target="_blank">
-              <img src="/img/facebook.png" alt=""></a>
+              <img src="./img/facebook.png" alt=""></a>
             <a href="https://wa.me/5548996071797">
-              <img src="/img/whatsapp.png" alt=""></a>
+              <img src="./img/whatsapp.png" alt=""></a>
           </div>
         </div>
       </div>
