--- a/doacoes.html
+++ b/doacoes.html
@@ -50,7 +50,7 @@
   <div class="contato-bg">
     <div class="contato container">
       <div class="whatsapp">
-        <img src="./img/contatos.png" alt="" id="doacoes">
+        <img src="./img/doacao.png" alt="" id="doacoes">
         <h3>Transferência Bancária</h3>
         <p>Você pode doar qualquer valor diretamente para nossa conta bancária.</p>
         <br>
@@ -60,7 +60,7 @@
         <p>C/C: 122356-5</p>
       </div>
       <div class="animais">
-        <img src="./img/adote.png" alt="">
+        <img src="./img/racao.png" alt="">
         <h3>Doações de Produtos</h3>
         <p>Doe rações, medicamentos e roupinhas cirurgias.</p>
         <br>
