Alteração de imagens e icons.

--- a/doacoes.html
+++ b/doacoes.html
@@ -68,11 +68,11 @@
       </div>
     </div>
   </div>
-  <main class="banner-bg">
+  <div class="banner-bg">
     <div class="container doacoes">
       <h1>Contamos com sua ajuda!</h1>
     </div>
-  </main>
+  </div>
 
   <footer>
     <div class="footer-bg">
