--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Página ONG Animais</title>
+  <meta name="description" content="Associação Batistense de Proteção aos Animais | ONG Responsável por auxiliar animais em estado de abandono na cidade de São João Batista - SC e região.">
+  <title>Associação Batistense de Proteção aos Animais</title>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -55,16 +57,16 @@
     <div class="article">
       <img src="./img/cat.jpg" alt="">
       <section class="article-historia">
-        <h4 id="historia">Nossa história</h4>
-        <p>Texto texto texto texto texto texto texto texto texto. Texto texto texto texto texto texto texto texto texto. Texto texto texto texto texto texto texto texto texto. Texto texto texto texto texto texto texto texto texto.</p>
-        <p>Texto texto texto texto texto texto texto texto texto. Texto texto texto texto texto texto texto texto texto. Texto texto texto texto texto texto texto texto texto. Texto texto texto texto texto texto texto texto texto.</p>
-        <p>Texto texto texto texto texto texto texto texto texto. Texto texto texto texto texto texto texto texto texto. Texto texto texto texto texto texto texto texto texto. Texto texto texto texto texto texto texto texto texto.</p>
+        <h4 id="historia">Um pouco sobre nós.</h4>
+        <p>A ABPA iniciou seu projeto em 2006, com a união de amigos que queriam ajudar a causa animal. Com o crescimento das ocorrências, e a necessidade de se tornar mais profissional, em 2013 abriu-se então nosso CNPJ.</p>
+        <p>O abandono de animais é realidade, e precisamos cada vez mais da ajuda da população, para auxiliar os animais afetados.</p>
+        <p>Hoje a maior dificuldade da ONG é encontrar lares temporários para os animais resgatados. E nisso você pode ajudar!.</p>
 
         <h5>Nossas ações:</h5>
         <ul class="article-acoes">
           <li>Resgates</li>
           <li>Castrações</li>
-          <li>Higienizações</li>
+          <li>Vacinações</li>
           <li>Lar temporário</li>
         </ul>
       </section>
@@ -82,8 +84,13 @@
         <img src="./img/adote.png" alt="">
         <h3>Animais para resgate</h3>
         <p>Deseja adotar algum animal? Veja quais estão precisando de um lar, e cuide do seu novo animalzinho.</p>
-        <a href="https://www.instagram.com/abpa_saojoaobatista">Adote o seu novo pet</a>
+        <a href="https://www.instagram.com/abpa_saojoaobatista" target="_blank">Veja animais necessitados</a>
       </div>
+    </div>
+  </div>
+  <div class="banner-bg">
+    <div class="container doacoes">
+      <a href="/doacoes.html">Faça sua Doação</a>
     </div>
   </div>
   <div clas="divisor">
@@ -107,7 +114,7 @@
             <a href="https://www.instagram.com/abpa_saojoaobatista" target="_blank"><img src="./img/instagram.png" alt=""></a>
             <a href="https://www.facebook.com/ABPAsjbatista" target="_blank">
               <img src="./img/facebook.png" alt=""></a>
-            <a href="https://wa.me/5548996071797">
+            <a href="https://wa.me/5548996071797" target="_blank">
               <img src="./img/whatsapp.png" alt=""></a>
           </div>
         </div>
@@ -116,7 +123,7 @@
     <div class="creditos-bg">
       <div class="creditos container">
         <div class="creditos-texto">
-          <p>Todos os Direitos Reservados - 2022. CNPJ: 23.746.525/0001-76. Desenvolvido por <a href="https://wa.me/5548996071797">Valdir Hames Júnior</a></p>
+          <p>Todos os Direitos Reservados - 2022. CNPJ: 23.746.525/0001-76. Desenvolvido por <a href="https://wa.me/5548996071797" target="_blank">Valdir Hames Júnior</a></p>
         </div>
       </div>
     </div>
