Atualização para o Responsivo

--- a/doacoes.html
+++ b/doacoes.html
@@ -55,14 +55,14 @@
         <p>Você pode doar qualquer valor diretamente para nossa conta bancária.</p>
         <br>
         <p>PIX CNPJ: <span class="pix">23.746.525/0001-76</span></p>
-        <p>Banco XXX</p>
-        <p>Agência: XXX</p>
-        <p>C/C: 122356-5</p>
+        <p>Banco do Brasil</p>
+        <p>Agência: 2629-8</p>
+        <p>Conta Corrente: 35972-6</p>
       </div>
       <div class="animais">
         <img src="./img/racao.png" alt="">
         <h3>Doações de Produtos</h3>
-        <p>Doe rações, medicamentos e roupinhas cirurgias.</p>
+        <p>Doe rações, medicamentos e roupinhas cirurgia. Aceitamos roupas para vender em nosso brechó e arrecadar valores.</p>
         <br>
         <p>Você pode entregar diretamente no endereço: SC-108, 20 - São João Batista, SC, 88240-000. Ou comprar em alguma agropecuária da região e nos avisar.</p>
       </div>
@@ -84,7 +84,7 @@
         <div class="footer-formulario" id="contato">
           <h3 class="h3-contato">CONTATO</h3>
           <h4>Telefone: +55 48 9 9607-1797</h4>
-          <h4 class="email">E-mail: valdirhamesj@gmail.com</h4>
+          <h4 class="email">E-mail: falecomabpa@gmail.com</h4>
           <div class="footer-contato">
             <a href="https://www.instagram.com/abpa_saojoaobatista" target="_blank"><img src="./img/instagram.png" alt=""></a>
             <a href="https://www.facebook.com/ABPAsjbatista" target="_blank">
