--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       <img src="./img/cat.jpg" alt="">
       <section class="article-historia">
         <h4 id="historia">Um pouco sobre nós.</h4>
-        <p>A ABPA iniciou seu projeto em 2006, com a união de amigos que queriam ajudar a causa animal. Com o crescimento das ocorrências, e a necessidade de se tornar mais profissional, em 2013 abriu-se então nosso CNPJ.</p>
-        <p>O abandono de animais é realidade, e precisamos cada vez mais da ajuda da população, para auxiliar os animais afetados.</p>
-        <p>Hoje a maior dificuldade da ONG é encontrar lares temporários para os animais resgatados. E nisso você pode ajudar!.</p>
+        <p>A Associação Brasileira de Proteção aos Animais (ABPA) iniciou seu projeto em 2006, com a união de amigos que queriam ajudar a causa animal. Com o crescimento das ocorrências, e a necessidade de se tornar mais profissional, em 2013 abriu-se então nosso CNPJ.</p>
+        <p>Todo o trabalho voluntário é mantido pelas doações dos contribuintes, e pelo sentimento de dever cumprido, ao resgatar e remanejar um animal indefeso.</p>
+        <p>O abandono de animais é realidade, e precisamos cada vez mais da ajuda da população, para auxiliar os animais afetados. Hoje a maior dificuldade da ONG é encontrar lares temporários para os animais resgatados. E nisso você pode ajudar!.</p>
 
         <h5>Nossas ações:</h5>
         <ul class="article-acoes">
@@ -109,7 +109,7 @@
         <div class="footer-formulario" id="contato">
           <h3 class="h3-contato">CONTATO</h3>
           <h4>Telefone: +55 48 9 9607-1797</h4>
-          <h4 class="email">E-mail: valdirhamesj@gmail.com</h4>
+          <h4 class="email">E-mail: falecomabpa@gmail.com</h4>
           <div class="footer-contato">
             <a href="https://www.instagram.com/abpa_saojoaobatista" target="_blank"><img src="./img/instagram.png" alt=""></a>
             <a href="https://www.facebook.com/ABPAsjbatista" target="_blank">
