Alterações de dados da ONG.

--- a/doacoes.html
+++ b/doacoes.html
@@ -19,8 +19,8 @@
       </div>
       <div class="header-info">
         <section class="header-contato">
-          <p>Entre em contato:</p>
-          <h3>(48) 9 9607-1797</h3>
+          <p>Faça a diferença:</p>
+          <h3>Adote um animal</h3>
         </section>
         <section class="header-localizacao">
           <p>Nossa localização:</p>
@@ -83,14 +83,12 @@
         </div>
         <div class="footer-formulario" id="contato">
           <h3 class="h3-contato">CONTATO</h3>
-          <h4>Telefone: +55 48 9 9607-1797</h4>
-          <h4 class="email">E-mail: falecomabpa@gmail.com</h4>
+          <h4>Nos envie uma mensagem pelo instagram</h4>
+          <h4 class="email">E-mail: sjbabpa@gmail.com</h4>
           <div class="footer-contato">
             <a href="https://www.instagram.com/abpa_saojoaobatista" target="_blank"><img src="./img/instagram.png" alt=""></a>
             <a href="https://www.facebook.com/ABPAsjbatista" target="_blank">
               <img src="./img/facebook.png" alt=""></a>
-            <a href="https://wa.me/5548996071797">
-              <img src="./img/whatsapp.png" alt=""></a>
           </div>
         </div>
       </div>
@@ -98,7 +96,7 @@
     <div class="creditos-bg">
       <div class="creditos container">
         <div class="creditos-texto">
-          <p>Todos os Direitos Reservados - 2022. CNPJ: 23.746.525/0001-76. Desenvolvido por <a href="https://wa.me/5548996071797">Valdir Hames Júnior</a></p>
+          <p>Todos os Direitos Reservados - 2022. CNPJ: 23.746.525/0001-76. Desenvolvido por <a href="https://wa.me/5548996071797">Valdir Hames Júnior</a>.</p>
         </div>
       </div>
     </div>
