--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       </div>
       <div class="header-info">
         <section class="header-contato">
-          <p>Entre em contato:</p>
-          <h3>(48) 9 9607-1797</h3>
+          <p>Faça a diferença:</p>
+          <h3>Adote um animal</h3>
         </section>
         <section class="header-localizacao">
           <p>Nossa localização:</p>
@@ -57,7 +57,7 @@
     <div class="article">
       <img src="./img/cat.jpg" alt="">
       <section class="article-historia">
-        <h4 id="historia">Um pouco sobre nós.</h4>
+        <h4 id="historia">Um pouco sobre nós</h4>
         <p>A Associação Brasileira de Proteção aos Animais (ABPA) iniciou seu projeto em 2006, com a união de amigos que queriam ajudar a causa animal. Com o crescimento das ocorrências, e a necessidade de se tornar mais profissional, em 2013 abriu-se então nosso CNPJ.</p>
         <p>Todo o trabalho voluntário é mantido pelas doações dos contribuintes, e pelo sentimento de dever cumprido, ao resgatar e remanejar um animal indefeso.</p>
         <p>O abandono de animais é realidade, e precisamos cada vez mais da ajuda da população, para auxiliar os animais afetados. Hoje a maior dificuldade da ONG é encontrar lares temporários para os animais resgatados. E nisso você pode ajudar!.</p>
@@ -78,13 +78,13 @@
         <img src="./img/contatos.png" alt="" id="doacoes">
         <h3>Converse Conosco</h3>
         <p>Deseja conhecer mais do nosso trabalho, ou doar algum valor? Entre em contato pelo nosso whatsapp.</p>
-        <a class="whatsapp-link" href="https://web.whatsapp.com/send?phone=5599111112222" target="_blank">Inicie uma conversa</a>
+        <a class="whatsapp-link" href="https://www.instagram.com/abpa_saojoaobatista/" target="_blank">Inicie uma conversa</a>
       </div>
       <div class="animais">
         <img src="./img/adote.png" alt="">
         <h3>Animais para resgate</h3>
         <p>Deseja adotar algum animal? Veja quais estão precisando de um lar, e cuide do seu novo animalzinho.</p>
-        <a href="https://www.instagram.com/abpa_saojoaobatista" target="_blank">Veja animais necessitados</a>
+        <a href="https://www.instagram.com/abpa_saojoaobatista" target="_blank">Veja os animais</a>
       </div>
     </div>
   </div>
@@ -108,14 +108,13 @@
         </div>
         <div class="footer-formulario" id="contato">
           <h3 class="h3-contato">CONTATO</h3>
-          <h4>Telefone: +55 48 9 9607-1797</h4>
-          <h4 class="email">E-mail: falecomabpa@gmail.com</h4>
+          <h4>Nos envie uma mensagem pelo instagram</h4>
+          <h4 class="email">E-mail: sjbabpa@gmail.com</h4>
           <div class="footer-contato">
             <a href="https://www.instagram.com/abpa_saojoaobatista" target="_blank"><img src="./img/instagram.png" alt=""></a>
             <a href="https://www.facebook.com/ABPAsjbatista" target="_blank">
               <img src="./img/facebook.png" alt=""></a>
-            <a href="https://wa.me/5548996071797" target="_blank">
-              <img src="./img/whatsapp.png" alt=""></a>
+
           </div>
         </div>
       </div>
@@ -123,7 +122,7 @@
     <div class="creditos-bg">
       <div class="creditos container">
         <div class="creditos-texto">
-          <p>Todos os Direitos Reservados - 2022. CNPJ: 23.746.525/0001-76. Desenvolvido por <a href="https://wa.me/5548996071797" target="_blank">Valdir Hames Júnior</a></p>
+          <p>Todos os Direitos Reservados - 2022. CNPJ: 23.746.525/0001-76. Desenvolvido por <a href="https://wa.me/5548996071797" target="_blank">Valdir Hames Júnior</a>.</p>
         </div>
       </div>
     </div>
